No floating on mobile, and trying to fix the competitions map.

--- a/WcaOnRails/app/assets/stylesheets/competitions.scss
+++ b/WcaOnRails/app/assets/stylesheets/competitions.scss
@@ -107,6 +107,7 @@ $venue-map-wrapper-height: 400px;
 
 #map {
   height: 600px;
+  width: 1000px;
 }
 
 #nearby-competitions {
